@@ -2,14 +2,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.share.dev</groupId>
 	<artifactId>database-transform-tool</artifactId>
-	<version>1.0</version>
+	<version>1.0.0</version>
 	<name>database-transform-tool</name>
 	<description>database-transform-tool</description>
-	<parent>
+	<!-- <parent>
 		<groupId>org.sonatype.oss</groupId>
 		<artifactId>oss-parent</artifactId>
 		<version>9</version>
-	</parent>
+	</parent> -->
 	<properties>
 		<java.version>1.8</java.version>
 		<java.encoding>UTF-8</java.encoding>
@@ -216,6 +216,18 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<!-- build-info,repackage -->
+						<goals>
+							<goal>build-info</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.7.0</version>
 				<configuration>
@@ -238,7 +250,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.0.2</version>
@@ -252,9 +264,12 @@
 							<mainClass>com.share.swing.Main</mainClass>
 						</manifest>
 					</archive>
+					<excludes>
+						<exclude>bin/*</exclude>
+					</excludes>
 				</configuration>
-			</plugin>
-			<plugin>
+			</plugin> -->
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
 				<version>3.0.1</version>
@@ -268,6 +283,94 @@
 						<configuration>
 							<outputDirectory>${project.build.directory}/lib</outputDirectory>
 						</configuration>
+					</execution>
+				</executions>
+			</plugin> -->
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>appassembler-maven-plugin</artifactId>
+				<version>2.0.0</version>
+				<configuration>
+					<repositoryLayout>flat</repositoryLayout>
+					<repositoryName>lib</repositoryName>
+					<binFileName>restart</binFileName>
+					<binFolder>bin</binFolder>
+					<configurationDirectory>conf</configurationDirectory>
+					<copyConfigurationDirectory>true</copyConfigurationDirectory>
+					<configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
+					<includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+					<target>${project.build.directory}</target>
+					<daemons>
+						<daemon>
+							<id>${project.name}</id>
+							<platforms>
+								<platform>jsw</platform>
+							</platforms>
+							<mainClass>com.share.swing.Main</mainClass>
+							<wrapperLogFile>logs/${project.name}.log</wrapperLogFile>
+							<generatorConfigurations>
+								<generatorConfiguration>
+									<generator>jsw</generator>
+									<includes>
+										<include>macosx-universal-64</include>
+										<include>linux-x86-32</include>
+										<include>linux-x86-64</include>
+										<include>windows-x86-32</include>
+										<include>windows-x86-64</include>
+									</includes>
+									<configuration>
+										<property>
+											<name>configuration.directory.in.classpath.first</name>
+											<value>conf</value>
+										</property>
+										<property>
+											<name>set.default.REPO_DIR</name>
+											<value>lib</value>
+										</property>
+										<property>
+											<name>wrapper.ping.timeout</name>
+											<value>300</value>
+										</property>
+										<property>
+											<name>wrapper.startup.timeout</name>
+											<value>300</value>
+										</property>
+									</configuration>
+								</generatorConfiguration>
+							</generatorConfigurations>
+							<jvmSettings>
+								<extraArguments>
+									<extraArgument>-server</extraArgument>
+									<extraArgument>-Xms128m</extraArgument>
+									<extraArgument>-Xmx128m</extraArgument>
+									<extraArgument>-Xmn60m</extraArgument>
+									<extraArgument>-XX:+UseG1GC</extraArgument>
+									<extraArgument>-Xloggc:/tmp/log/gc.log</extraArgument>
+									<extraArgument>-XX:+HeapDumpOnOutOfMemoryError</extraArgument>
+									<extraArgument>-XX:+PrintGCDetails</extraArgument>
+									<extraArgument>-XX:+PrintGCTimeStamps</extraArgument>
+									<!--火焰图,只支持JDK8 -->
+									<!--<extraArgument>-XX:+PreserveFramePointer</extraArgument> -->
+									<!--测试SSL -->
+									<!--<extraArgument>-Djavax.net.debug=ssl</extraArgument> -->
+									<!--定位OOM时启用 -->
+									<!--<extraArgument>-Dio.netty.leakDetectionLevel=paranoid</extraArgument> -->
+									<!--<extraArgument>-Dio.netty.allocator.tinyCacheSize=0</extraArgument> -->
+									<!--<extraArgument>-Dio.netty.allocator.smallCacheSize=0</extraArgument> -->
+									<!--<extraArgument>-Dio.netty.allocator.normalCacheSize=0</extraArgument> -->
+								</extraArguments>
+							</jvmSettings>
+						</daemon>
+					</daemons>
+				</configuration>
+				<executions>
+					<execution>
+						<id>generate-jsw-scripts</id>
+						<phase>package</phase>
+						<goals>
+							<goal>generate-daemons</goal>
+							<goal>create-repository</goal>
+						</goals>
 					</execution>
 				</executions>
 			</plugin>
@@ -290,63 +393,6 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.1.0</version>
-				<dependencies>
-					<dependency>
-						<groupId>com.github.edwgiz</groupId>
-						<artifactId>maven-shade-plugin.log4j2-cachefile-transformer</artifactId>
-						<version>2.1</version>
-					</dependency>
-				</dependencies>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<filters>
-						<filter>
-							<artifact>*:*</artifact>
-							<excludes>
-								<exclude>META-INF/*.SF</exclude>
-								<exclude>META-INF/*.DSA</exclude>
-								<exclude>META-INF/*.RSA</exclude>
-							</excludes>
-						</filter>
-					</filters>
-					<relocations>
-						<relocation>
-							<pattern>org.apache.logging.log4j</pattern>
-							<shadedPattern>com.share.dev.log4j</shadedPattern>
-						</relocation>
-						<relocation>
-							<pattern>io.netty</pattern>
-							<shadedPattern>com.share.dev.io.netty</shadedPattern>
-						</relocation>
-						<relocation>
-							<pattern>org.jboss.netty</pattern>
-							<shadedPattern>com.share.dev.jboss.netty</shadedPattern>
-						</relocation>
-						<relocation>
-							<pattern>com.google</pattern>
-							<shadedPattern>com.share.dev.guava</shadedPattern>
-						</relocation>
-						<relocation>
-							<pattern>com.alibaba.fastjson</pattern>
-							<shadedPattern>com.share.dev.fastjson</shadedPattern>
-						</relocation>
-					</relocations>
-					<transformers>
-						<transformer implementation="com.github.edwgiz.mavenShadePlugin.log4j2CacheTransformer.PluginsCacheFileTransformer"/>
-					</transformers>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
